# DEALHost

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  manage.py  pyproject.toml  renovate.json  requirements.txt  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: apisix-routes-validate.yml  bandit.yml  ci.yml  codacy.yml  codeql.yml  hosting-manifests-validate.yml  ossar.yml  osv-scanner.yml  pre-commit.yml  renovate.yml  sdk-unit-tests.yml  sonarcloud.yml
apps/common/: authentication.py  permissions.py
apps/gateway/: apps.py  services.py  urls.py  views.py
apps/hosting/: admin.py  apps.py  discovery.py  models.py  serializers.py  urls.py  views.py
apps/iam/: apps.py  serializers.py  urls.py  views.py
dealhost/: asgi.py  urls.py  wsgi.py
dealhost.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dealhost/settings/: base.py  env.py  prod.py  test.py
infra/apisix/: routes.json
manifests/: module-core.json
manifests/applications/: dealdata-platform.json  dealiot-platform.json  storefront.json
manifests/modules/: airflow-orchestration.json  beam-runtime.json  dealdata-core-layer.json  dealdata-gps-layer.json  (+9 more)
scripts/: validate_hosting_manifests.py
sdk/python/: pyproject.toml
sdk/python/dealhost_sdk/: __init__.py  client.py
sdk/python/tests/: test_client.py
sdk/rust/dealhost-sdk/: Cargo.toml
sdk/rust/dealhost-sdk/src/: lib.rs
tests/: __init__.py  test_events_bus.py  test_events_publisher.py  test_gateway_events.py  test_gateway_services.py  test_hosting_dashboard_datasets.py  test_hosting_discovery.py  test_hosting_events.py  test_hosting_relations.py  test_iam_security.py  test_settings_prod.py
(+40 files in other folders)
