[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dealhost-sdk"
version = "0.1.0"
description = "Python SDK for DEALHost hosting API"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28,<0.29",
]

[tool.setuptools]
packages = ["dealhost_sdk"]
