[package]
name = "dealhost-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for DEALHost hosting API"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
